# plmrepeat

./: LICENSE  README.md  pyproject.toml
example/: 2QJ6_A.emb  2QJ6_A.fasta  5AMS_A.emb  5AMS_A.fasta  6A57_A.emb  6A57_A.fasta
model/: LA.py
plmrepeat/: alignment.py  base.py  cli.py  cluster.py  extract.py  transitivity.py  utils.py
plmrepeat_colab/: __init__.py  alignment.py  base.py  base_interactive.py  cluster.py  extract.py  main.py  plmrepeat.py  requirements.yml  utils.py
plmrepeat_colab/alntools/: numeric.py
plmrepeat_colab/alntools/prepare/: iterate.py
script/: plmrepeat.py  plmrepeat_run.py
